--- a/index.htm
+++ b/index.htm
@@ -138,7 +138,7 @@
 <body>
   <h1>Download Movie App APK</h1>
   <p>Click the button below to download the APK file.</p>
-  <a href="MoviePro.apk" download>
+  <a href="Moviepro.apk" download>
     <button>Download APK</button>
   </a>
 
